Testing GitHub Pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>Welcome</h1>
+        <h1>Welcome to Grace's Photography Website</h1>
     </main>
 </body>
 </html>
