Content is there, Documentation and Styling not so much

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,212 @@
 </head>
 <body>
     <main>
-        <h1>Welcome to Grace's Photography Website</h1>
+      <div class="hero bg-base-200 min-h-screen">
+        <div class="hero-content justify-center">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <img
+            src="./assets/images/Headshot.jpeg"
+            class="max-w-xs rounded-lg shadow-2xl justify-center" />
+            <div>
+              <h1 class="text-4xl font-bold text-center">Grace's Photography Collection</h1>
+              <p class="py-6">
+                Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                quasi. In deleniti eaque aut repudiandae et a id nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, quae! Aut deserunt, quibusdam architecto officiis, maxime dolores sapiente dicta illum placeat adipisci velit nesciunt expedita eius incidunt magnam modi qui.
+              </p>
+              <div class="divider"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="p-10 grid sm:grid-cols-1 md:grid-cols-2 m-auto lg:grid-cols-3 gap-4 justify-around">
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/beach.jpeg" alt="Image of Beach">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Beach</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/blue_pool_forest.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Blue Pool</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/thai_something.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Grace</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/thai_field.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Thai Field</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/thai_food.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Thai Food</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/thai_market.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Thai Market</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/thai_shoes.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Thai Shoes</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/jellys.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Jellys</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/merser.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Merser Lake</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-200 md:col-span-2">
+          <figure>
+            <img src="assets/images/whitworth.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Whitworth</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/cows.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Hawaiian Cows</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+          <div class="w-100">
+            <figure>
+              <img src="assets/images/northern_lights.jpeg" alt="Image of">
+            </figure>
+            <div class="card-body">
+              <h1 class="card-title">Image of Northern Lights</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              </p>
+            </div>
+          </div>
+          <div class="w-100">
+            <figure>
+              <img src="assets/images/flowers.jpeg" alt="Image of">
+            </figure>
+            <div class="card-body">
+              <h1 class="card-title">Image of Flowers</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              </p>
+            </div>
+          </div>
+          <div class="w-100">
+            <figure>
+              <img src="assets/images/swimmers.jpeg" alt="Image of">
+            </figure>
+            <div class="card-body">
+              <h1 class="card-title">Image of Swimmers</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              </p>
+            </div>
+          </div>
+        <div class="w-200 md:col-span-2">
+          <figure>
+            <img src="assets/images/sunset.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Sunset</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100">
+          <figure>
+            <img src="assets/images/ellie.jpg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Ellie</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+        <div class="w-100 col-start-2">
+          <figure>
+            <img src="assets/images/ruby.jpeg" alt="Image of">
+          </figure>
+          <div class="card-body">
+            <h1 class="card-title">Image of Ruby</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
 </body>
 </html>
