Content and Style look good enough now

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-      <div class="hero bg-base-200 min-h-screen">
+      <div class="hero min-h-screen">
         <div class="hero-content justify-center">
           <div class="hero-content flex-col lg:flex-row-reverse">
             <img
@@ -17,23 +17,26 @@
             <div>
               <h1 class="text-4xl font-bold text-center">Grace's Photography Collection</h1>
               <p class="py-6">
-                Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                quasi. In deleniti eaque aut repudiandae et a id nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, quae! Aut deserunt, quibusdam architecto officiis, maxime dolores sapiente dicta illum placeat adipisci velit nesciunt expedita eius incidunt magnam modi qui.
+                Hi, my name is Grace Oster. This is my personal photography collage. Enjoy!
               </p>
               <div class="divider"></div>
             </div>
           </div>
         </div>
       </div>
-      <div class="p-10 grid sm:grid-cols-1 md:grid-cols-2 m-auto lg:grid-cols-3 gap-4 justify-around">
-        <div class="w-100">
+      <div class="p-10 w-full lg:grid lg:grid-cols-3 gap-4 justify-around">
+        <div class="w-max-100">
           <figure>
             <img src="assets/images/beach.jpeg" alt="Image of Beach">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Beach</h1>
+            <h1 class="card-title">Let’s Go Fly a Kite</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> March 28, 2023</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken on the Oregon Coast at sunset. My boyfriend had never flown a kite before, so we decided to change that.
             </p>
           </div>
         </div>
@@ -42,9 +45,13 @@
             <img src="assets/images/blue_pool_forest.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Blue Pool</h1>
+            <h1 class="card-title">Serene Hike with Dad</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> July 9, 2023</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken on a hike up to see Blue Pool with my dad. The hike was gorgeous, but it was hard to focus on anything but the blisters forming on my heels.
             </p>
           </div>
         </div>
@@ -53,9 +60,13 @@
             <img src="assets/images/thai_something.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Grace</h1>
+            <h1 class="card-title">Anusarn Market</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> August 14, 2022</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken at a night market in Chiang Mai, Thailand during a service trip. People were bustling all around, with hundreds of vendors and buyers speaking in dozens of languages. 
             </p>
           </div>
         </div>
@@ -64,9 +75,13 @@
             <img src="assets/images/thai_field.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Thai Field</h1>
+            <h1 class="card-title">Calm Before the Storm</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> August 14, 2024</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken on a hike across rice fields towards an elephant sanctuary in Chiang Mai, Thailand. Five minutes later, the sky filled with dark clouds and drenched us with rain.
             </p>
           </div>
         </div>
@@ -75,9 +90,13 @@
             <img src="assets/images/thai_food.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Thai Food</h1>
+            <h1 class="card-title">Thai Cooking</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> August 13, 2024</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken in Chiang Mai, Thailand after I cooked a five-course meal in a Thai cooking class. I cooked Pad Thai, Tom Kha, Massaman Curry, and more shown in the photo. The food tasted beyond description. 
             </p>
           </div>
         </div>
@@ -86,9 +105,13 @@
             <img src="assets/images/thai_market.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Thai Market</h1>
+            <h1 class="card-title">Tuk Tuk Adventure</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> August 13, 2024</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken in Chiang Mai, Thailand after my friends and I wandered downtown for an hour, hopped in a Tuk Tuk, and got dropped oI at a random food market in Old Town. We stopped at the vendor shown on the left and devoured her dumplings quickly.
             </p>
           </div>
         </div>
@@ -97,9 +120,13 @@
             <img src="assets/images/thai_shoes.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Thai Shoes</h1>
+            <h1 class="card-title">Shoes to Fill</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> August 13, 2024</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken in Chiang Mai, Thailand at a vendor’s cart selling baby shoes and stuffed animals. The bright colors and unique patterns caught my eye. 
             </p>
           </div>
         </div>
@@ -108,9 +135,13 @@
             <img src="assets/images/jellys.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Jellys</h1>
+            <h1 class="card-title">Chrysaora Quinquecirrha</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> May 27, 2023</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken at the Lincoln Children’s Zoo in Lincoln, NE which I visited with my best friend and her siblings. This was my first time in a zoo, and probably my last due to an incident with an alligator.
             </p>
           </div>
         </div>
@@ -119,20 +150,28 @@
             <img src="assets/images/merser.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Merser Lake</h1>
+            <h1 class="card-title">Kayaking on Mercer Lake</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> May 20, 2024</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken on Mercer Lake in Florence, OR. This lake is one of my favorite places in the world; I wanted to capture this peaceful moment my friend and I shared on the lake I grew up playing and swimming in.
             </p>
           </div>
         </div>
-        <div class="w-200 md:col-span-2">
+        <div class="max-w-200 w-full md:col-span-2">
           <figure>
             <img src="assets/images/whitworth.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Whitworth</h1>
+            <h1 class="card-title">Fall into Winter</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> November 7, 2022</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              I took this photo on Whitworth’s campus as a reminder that transitions can be beautiful. The leaves on the trees were just changing color and not ready for the snow, but the two seasons merged and created a masterpiece.
             </p>
           </div>
         </div>
@@ -141,9 +180,13 @@
             <img src="assets/images/cows.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Hawaiian Cows</h1>
+            <h1 class="card-title">Hawaiian Cows</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> December 20, 2022</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken on the coast of Maui right before our swim team completed an ocean open-water swim. I never expected to see cows in Hawaii, but nevertheless they looked right at home on the beach.
             </p>
           </div>
         </div>
@@ -152,9 +195,13 @@
               <img src="assets/images/northern_lights.jpeg" alt="Image of">
             </figure>
             <div class="card-body">
-              <h1 class="card-title">Image of Northern Lights</h1>
+              <h1 class="card-title">Northern (Washington) Lights</h1>
+              <div class="flex justify-between">
+                <p class="card-title font-normal text-sm"><strong>Date:</strong> May 10, 2024</p>
+                <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+              </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+                This was taken as I laid on top of my Chevy Blazer in the middle of a deserted road with my closest friends. This was my first time seeing northern lights, and it was a completely unexpected treat.
               </p>
             </div>
           </div>
@@ -163,9 +210,13 @@
               <img src="assets/images/flowers.jpeg" alt="Image of">
             </figure>
             <div class="card-body">
-              <h1 class="card-title">Image of Flowers</h1>
+              <h1 class="card-title">Flowers of Florence (Oregon, not Italy)</h1>
+              <div class="flex justify-between">
+                <p class="card-title font-normal text-sm"><strong>Date:</strong> July 30, 2022</p>
+                <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+              </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+                This was taken in Florence, OR during the summer after my senior year. The vibrant flowers sat beautifully next to my mom’s favorite coffee shop, River Roasters.
               </p>
             </div>
           </div>
@@ -174,20 +225,28 @@
               <img src="assets/images/swimmers.jpeg" alt="Image of">
             </figure>
             <div class="card-body">
-              <h1 class="card-title">Image of Swimmers</h1>
+              <h1 class="card-title">“Ready, Set, Swim!”</h1>
+              <div class="flex justify-between">
+                <p class="card-title font-normal text-sm"><strong>Date:</strong> November 3, 2020</p>
+                <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>744 x 992</p>
+              </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+                This photo was taken at my club swim team’s practice for the team’s developing website. I caught a joyful moment shared between my teammates before we began a difficult set.
               </p>
             </div>
           </div>
-        <div class="w-200 md:col-span-2">
+        <div class="max-w-200 w-full  md:col-span-2">
           <figure>
             <img src="assets/images/sunset.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Sunset</h1>
+            <h1 class="card-title">Sunrise Hike</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> June 20, 2022</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken at the top of Spencer’s Butte, a 3-mile hike in my hometown Eugene, OR. This view is extremely rewarding after the challenging hike up, especially at sunrise. This is my favorite hike to do with family and friends, as long as we bring a speaker to scare off the cougars.
             </p>
           </div>
         </div>
@@ -196,9 +255,13 @@
             <img src="assets/images/ellie.jpg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Ellie</h1>
+            <h1 class="card-title">Ellie’s Senior Year</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> December 31, 2024</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken in downtown Portland for my cousin, Ellie’s, senior photo submission. This photo perfectly captures her timid personality, style, and beauty. 
             </p>
           </div>
         </div>
@@ -207,9 +270,13 @@
             <img src="assets/images/ruby.jpeg" alt="Image of">
           </figure>
           <div class="card-body">
-            <h1 class="card-title">Image of Ruby</h1>
+            <h1 class="card-title">Golden Smile, Golden Heart</h1>
+            <div class="flex justify-between">
+              <p class="card-title font-normal text-sm"><strong>Date:</strong> February 10, 2023</p>
+              <p class="card-title font-normal text-sm"><strong>Dimensions:</strong>3024 x 4032</p>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eligendi doloribus mollitia repudiandae excepturi voluptatibus nostrum, repellendus nobis error, beatae facilis, tempora et iste dolorem. Ab ratione fugit totam ea?
+              This was taken on a walk around the neighborhood with my dog, Ruby. She is the sweetest, gentlest girl who loves going on walks and getting her picture taken.
             </p>
           </div>
         </div>
