--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <main>
       <div class="hero min-h-screen">
         <div class="hero-content justify-center">
-          <div class="hero-content flex-col lg:flex-row-reverse">
+          <div class="hero-content flex-col lg:flex-row-reverse lg:gap-25">
             <img
             src="./assets/images/Headshot.jpeg"
+            alt="Image of Grace Oster"
             class="max-w-xs rounded-lg shadow-2xl justify-center" />
             <div>
               <h1 class="text-4xl font-bold text-center">Grace's Photography Collection</h1>
@@ -25,9 +26,9 @@
         </div>
       </div>
       <div class="p-10 w-full lg:grid lg:grid-cols-3 gap-4 justify-around">
-        <div class="w-max-100">
+        <div class="w-100">
           <figure>
-            <img src="assets/images/beach.jpeg" alt="Image of Beach">
+            <img src="assets/images/beach.jpeg" alt="Image of Oregon Beach, Oregon, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Let’s Go Fly a Kite</h1>
@@ -42,7 +43,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/blue_pool_forest.jpeg" alt="Image of">
+            <img src="assets/images/blue_pool_forest.jpeg" alt="Image of Forest near Blue Pool, Oregon, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Serene Hike with Dad</h1>
@@ -57,7 +58,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/thai_something.jpeg" alt="Image of">
+            <img src="assets/images/anusarn_market.jpeg" alt="Image of Anusarn Market, Chiang Mai, Thailand">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Anusarn Market</h1>
@@ -72,7 +73,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/thai_field.jpeg" alt="Image of">
+            <img src="assets/images/thai_field.jpeg" alt="Image of Rice Fields, Chiang Mai, Thailand">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Calm Before the Storm</h1>
@@ -87,7 +88,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/thai_food.jpeg" alt="Image of">
+            <img src="assets/images/thai_food.jpeg" alt="Image of Thai Food, Chiang Mai, Thailand">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Thai Cooking</h1>
@@ -102,7 +103,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/thai_market.jpeg" alt="Image of">
+            <img src="assets/images/tuk_tuk.jpeg" alt="Image of Tuk Tuk, Chiang Mai, Thailand">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Tuk Tuk Adventure</h1>
@@ -117,7 +118,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/thai_shoes.jpeg" alt="Image of">
+            <img src="assets/images/thai_shoes.jpeg" alt="Image of Children’s Shoes, Chiang Mai, Thailand">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Shoes to Fill</h1>
@@ -132,7 +133,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/jellys.jpeg" alt="Image of">
+            <img src="assets/images/jellyfish.jpeg" alt="Image of Jellyfish, Nebraska, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Chrysaora Quinquecirrha</h1>
@@ -147,7 +148,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/merser.jpeg" alt="Image of">
+            <img src="assets/images/mercer.jpeg" alt="Image of Mercer Lake, Florence, Oregon, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Kayaking on Mercer Lake</h1>
@@ -162,7 +163,7 @@
         </div>
         <div class="max-w-200 w-full md:col-span-2">
           <figure>
-            <img src="assets/images/whitworth.jpeg" alt="Image of">
+            <img src="assets/images/whitworth.jpeg" alt="Image of Whitworth University in the snow, Washington, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Fall into Winter</h1>
@@ -177,7 +178,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/cows.jpeg" alt="Image of">
+            <img src="assets/images/cows.jpeg" alt="Image of Hawaiian Cows near the coast of Maui, Hawaii, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Hawaiian Cows</h1>
@@ -192,7 +193,7 @@
         </div>
           <div class="w-100">
             <figure>
-              <img src="assets/images/northern_lights.jpeg" alt="Image of">
+              <img src="assets/images/northern_lights.jpeg" alt="Image of Northern Lights, Washington, USA">
             </figure>
             <div class="card-body">
               <h1 class="card-title">Northern (Washington) Lights</h1>
@@ -207,7 +208,7 @@
           </div>
           <div class="w-100">
             <figure>
-              <img src="assets/images/flowers.jpeg" alt="Image of">
+              <img src="assets/images/flowers.jpeg" alt="Image of Flowers, Florence, Oregon, USA">
             </figure>
             <div class="card-body">
               <h1 class="card-title">Flowers of Florence (Oregon, not Italy)</h1>
@@ -222,7 +223,7 @@
           </div>
           <div class="w-100">
             <figure>
-              <img src="assets/images/swimmers.jpeg" alt="Image of">
+              <img src="assets/images/swimmers.jpeg" alt="Image of young competitive swimmers, Eugene, Oregon, USA">
             </figure>
             <div class="card-body">
               <h1 class="card-title">“Ready, Set, Swim!”</h1>
@@ -237,7 +238,7 @@
           </div>
         <div class="max-w-200 w-full  md:col-span-2">
           <figure>
-            <img src="assets/images/sunset.jpeg" alt="Image of">
+            <img src="assets/images/sunrise.jpeg" alt="Image of Sunrise on Spencer’s Butte, Eugene, Oregon, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Sunrise Hike</h1>
@@ -252,7 +253,7 @@
         </div>
         <div class="w-100">
           <figure>
-            <img src="assets/images/ellie.jpg" alt="Image of">
+            <img src="assets/images/ellie.jpg" alt="Senior photo for high school senior, Portland, Oregon, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Ellie’s Senior Year</h1>
@@ -267,7 +268,7 @@
         </div>
         <div class="w-100 col-start-2">
           <figure>
-            <img src="assets/images/ruby.jpeg" alt="Image of">
+            <img src="assets/images/ruby.jpeg" alt="Image of Golden Retriever Ruby, Eugene, Oregon, USA">
           </figure>
           <div class="card-body">
             <h1 class="card-title">Golden Smile, Golden Heart</h1>
