Hopefully fixed the weird padding thing with the images overlapping

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
       </div>
       <div
-        class="relative grid w-screen justify-items-center gap-y-8 p-10 sm:grid-cols-1 lg:grid-cols-3"
+        class="relative grid w-screen justify-items-center gap-x-5 gap-y-8 p-10 sm:grid-cols-1 lg:grid-cols-3"
       >
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/beach.jpeg"
@@ -62,7 +62,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/blue_pool_forest.jpeg"
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/anusarn_market.jpeg"
@@ -114,7 +114,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/thai_field.jpeg"
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/thai_food.jpeg"
@@ -167,7 +167,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/tuk_tuk.jpeg"
@@ -194,7 +194,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/thai_shoes.jpeg"
@@ -220,7 +220,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/jellyfish.jpeg"
@@ -247,7 +247,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/mercer.jpeg"
@@ -274,7 +274,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-240 shadow-sm md:col-span-2">
+        <div class="card bg-base-200 max-w-216 shadow-sm md:col-span-2">
           <figure>
             <img
               src="assets/images/whitworth.jpeg"
@@ -301,7 +301,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/cows.jpeg"
@@ -328,7 +328,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/northern_lights.jpeg"
@@ -354,7 +354,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/flowers.jpeg"
@@ -380,7 +380,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/swimmers.jpeg"
@@ -406,7 +406,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-240 shadow-sm md:col-span-2">
+        <div class="card bg-base-200 max-w-216 shadow-sm md:col-span-2">
           <figure>
             <img
               src="assets/images/sunrise.jpeg"
@@ -434,7 +434,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm">
+        <div class="card bg-base-200 max-w-108 shadow-sm">
           <figure>
             <img
               src="assets/images/ellie.jpeg"
@@ -460,7 +460,7 @@
           </div>
         </div>
 
-        <div class="card bg-base-200 max-w-120 shadow-sm lg:col-start-2">
+        <div class="card bg-base-200 max-w-108 shadow-sm lg:col-start-2">
           <figure>
             <img
               src="assets/images/ruby.jpeg"
